# rag_ingestion_pipel-ine

./: README.md  main.py  pyproject.toml  resilience_layer.patch  tool_registry.patch
app/: chunker.py  cleaner.py  config.py  experiment.py  filters.py  incremental_ingest.py  indexer.py  loader.py  models.py
app/access/: guard.py  policy.py
app/embeddings/: base.py  sentence_transformer_embedder.py  tfidf_embedder.py
app/evaluation/: dataset.py  evaluate.py  metrics.py
app/generation/: bot_llm.py  loader.py  pipeline.py  prompt.py
app/hybrid/: fusion.py  retriever.py
app/registry/: __init__.py  access.py  errors.py  execution.py  metrics.py  models.py  recovery.py  registry.py  resilience.py  tools.py  validation.py
app/rerank/: cross_encoder_reranker.py  reranker.py
app/retrieval/: engine.py  loader.py
app/sparse/: bm25_index.py
app/vectorstore/: base.py  numpy_store.py
data/: acme_deployment_notes.txt  eval_set.json  sample.txt  tenant_b_handbook.txt
output/: bm25_index.pkl  chunks.json  embedder.pkl
output/vector_store/: records.json  vectors.npy
scripts/: ask.py  build_index.py  registry_demo.py  resilience_demo.py  run_eval.py
tests/: conftest.py  test_access_control.py  test_evaluation.py  test_generation.py  test_guarded_execute.py  test_hybrid_retriever.py  test_registry.py  test_resilience.py  test_validation.py
